--- a/src/sql_queries.properties
+++ b/src/sql_queries.properties
@@ -101,6 +101,8 @@ TRIP_FIND_BY_ID=select * from TTrips where id = ?
 TRIP_FIND_BY_PROMOTER=select * from TTrips where promoter_id = ?
 TRIP_FIND_ALL=select * from TTrips
 TRIP_FIND_BY_PROMOTER_AND_ARRIVAL=select * from TTrips where promoter_Id = ? and arrivalDate = ?
+TRIP_FIND_DISPONIBLES=select * from TTrips where closingDate > CURRENT_DATE \
+and departureDate > CURRENT_DATE and availablePax > 0
 
 APPLICATION_INSERT=insert into TApplications (applicants_ID, appliedTrips_ID) values (?, ?)
 APPLICATION_DELETE=delete from TApplications where applicants_ID = ? and appliedTrips_ID = ? 
