--- a/src/sql_queries.properties
+++ b/src/sql_queries.properties
@@ -12,6 +12,7 @@ SEAT_FIND_BY_ID=select * from TSeats where user_id = ? and trip_id = ?
 SEAT_FIND_BY_USER=select * from TSeats where user_id = ?
 SEAT_FIND_ALL=select * from TSeats
 SEAT_FIND_BY_TRIP=select * from TSeats where trip_id = ? 
+SEAT_FIND_BY_TRIP_ACCEPTED=select * from TSeats where trip_id = ? and status = 0
 
 RATING_INSERT=insert into TRatings (\
 			comment, \
